--- a/components/card_release_note.css
+++ b/components/card_release_note.css
@@ -1,7 +1,8 @@
-.card-release-note {
+.card_release_note {
   width: 100%;
   padding: 30px;
   min-width: 300px;
+  border-radius: var(--corner_radius);
   position: relative;
   display: flex;
   align-items: flex-start;
@@ -9,7 +10,9 @@
   gap: 30px;
   background-color: var(--color_baige_light);
 }
-.card-release-note-header {
+
+.card_release_note_header {
+  border-radius: var(--corner_radius);
   display: flex;
   align-items: center;
   flex-direction: row;
