--- a/components/collapsible.css
+++ b/components/collapsible.css
@@ -5,7 +5,7 @@
 .collapsible-button {
   width: 100%;
   height: 60px;
-  content: '\02795;
+  content: '\02795';
   padding: 15px;
   font-style: normal;
   font-weight: 700;
