--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root {
   --color_dark_green: #003700;
   --color_dark_blue: #103050;
-  --color_dark_gray: #101010;
-  --color_black: #040404;
+  --color_gray_medium: #404040;
+  --color_gray_dark: #101010;
+  --color_black: #060606;
   --color_white: #F5F5F5;
   --color_baige_light: #ece8d8;
   --color_baige_dark: #DDD5C0;
@@ -69,6 +70,16 @@ button {
 
 .shadow_normal {
   box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.25);
+}
+
+.divider_row {
+  border-bottom: 1px solid var(--color_gray_medium);
+}
+
+.logo_small {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
 }
 
 .textarea {
