--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   src: url(./font_birmingham.ttf) format("truetype");
 }
 
-h1, h2, h3, p {
+h1, h2, h3, h4, p {
   margin: 0;
   padding: 0;
   line-height: 1.5em;
@@ -45,6 +45,12 @@ h3 {
   color: var(--color_dark_green);
 }
 
+h4 {
+  font-size: 16px;
+  font-family: "Birmingham", serif;
+  color: var(--color_baige_light);
+}
+
 p {
   font-size: 16px;
   font-family: Garamond, serif;
@@ -60,14 +66,6 @@ button {
   font-weight: 700;
 }
 
-.icon {
-  width: 32px;
-  height: 32px;
-  flex-shrink: 0;
-  display: inline-block;
-  fill: var(--color_dark_green);
-}
-
 .shadow_normal {
   box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.25);
 }
@@ -76,9 +74,15 @@ button {
   border-bottom: 1px solid var(--color_gray_medium);
 }
 
-.logo_small {
-  width: 40px;
-  height: 40px;
+.icon_small {
+  width: 24px;
+  height: 24px;
+  object-fit: cover;
+}
+
+.icon_large {
+  width: 42px;
+  height: 42px;
   object-fit: cover;
 }
 
