--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
   --color_dark_blue: #103050;
   --color_gray_medium: #404040;
   --color_gray_dark: #101010;
+  --color_gray_dark_hover: #202020;
   --color_black: #060606;
   --color_white: #F5F5F5;
   --color_baige_light: #ece8d8;
   --color_baige_dark: #DDD5C0;
-  --padding_small: 15px;
-  --padding_medium: 30px;
-  --padding_large: 60px;
-  --corner_radius: 20px;
+  --color_baige_dark_hover: #CDC5B0;
+  --color_red: #701010;
 }
 
 @font-face {
@@ -18,7 +17,12 @@
   src: url(./font_birmingham.ttf) format("truetype");
 }
 
-h1, h2, h3, h4, p {
+* {  
+  box-sizing: border-box;  
+  border-width: 0;
+}
+
+h1, h2, h3, h4, p, li {
   margin: 0;
   padding: 0;
   line-height: 1.5em;
@@ -40,30 +44,53 @@ h2 {
 
 h3 {
   font-size: 20px;
-  font-family: Garamond, serif;
-  font-weight: 700;
+  font-family: Helvetica, sans-serif;
+  font-weight: 600;
   color: var(--color_dark_green);
 }
 
 h4 {
   font-size: 16px;
-  font-family: "Birmingham", serif;
-  color: var(--color_baige_light);
+  font-family: Helvetica, sans-serif;
+  font-weight: 600;
+  color: var(--color_dark_green);
 }
 
 p {
-  font-size: 16px;
-  font-family: Garamond, serif;
-  font-weight: 400;
+  font-size: 18px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
   color: var(--color_black);
 }
 
+a {
+  font-size: 18px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 600;
+  color: inherit;  
+  text-decoration: inherit;
+}
+
 button {
-  min-height: 42px;
-  min-width: 42px;
-  font-size: 16px;
-  font-family: Garamond, serif;
-  font-weight: 700;
+  width: auto;
+  min-width: calc(var(--padding_large) * 3);
+  height: var(--padding_large);
+  cursor: pointer;
+  font-size: 18px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 600;
+  text-align: center;
+  padding: var(--padding_small);
+  border-radius: var(--corner_radius);
+  background-color: var(--color_baige_light);
+}
+
+button:hover {
+  background-color: var(--color_baige_dark_hover);
+}
+
+body {  
+  margin: 0;
 }
 
 .shadow_normal {
@@ -85,67 +112,3 @@ button {
   height: 42px;
   object-fit: cover;
 }
-
-.textarea {
-  color: var(--color_black);
-  cursor: auto;
-  padding: 0.5rem;
-  font-family: Poppins;
-  border-color: var(--color_black);
-  border-width: 1px;
-  border-radius: 4px;
-  background-color: var(--color_white);
-}
-
-.input {
-  color: var(--color_black);
-  cursor: auto;
-  padding: 0.5rem 1rem;
-  font-family: Poppins;
-  border-color: var(--color_black);
-  border-width: 1px;
-  border-radius: 4px;
-  background-color: var(--color_white);
-}
-
-.subheading {
-  font-size: 1.6rem;
-  font-family: Poppins;
-  font-weight: 400;
-  text-transform: none;
-  text-decoration: none;
-}
-
-.heading {
-  font-size: 3rem;
-  font-family: Poppins;
-  font-weight: 700;
-  line-height: 1.55;
-  text-transform: none;
-  text-decoration: none;
-}
-
-.content {
-  font-size: 16px;
-  font-family: Poppins;
-  font-weight: 400;
-  line-height: 1.55;
-  text-transform: none;
-  text-decoration: none;
-}
-
-.collapsible_button {
-  width: 100%;
-  cursor: pointer;
-  height: 100px;
-}
-
-.collapsible_content {
-  display: none;
-  overflow: hidden;
-  max-height: 0;
-  transition: max-height 0.25s ease-out;
-}
-
-
-
