--- a/style.css
+++ b/style.css
@@ -81,13 +81,21 @@ button {
   font-weight: 600;
   text-align: center;
   color: var(--color_dark_green);
-  padding: var(--padding_small);
+  padding-top: var(--padding_small);
+  padding-left: var(--padding_medium);
+  padding-right: var(--padding_medium);
+  padding-bottom: var(--padding_small);
   border-radius: var(--corner_radius);
   background-color: var(--color_baige_light);
 }
 
-button:hover {
+button:hover:enabled {
   background-color: var(--color_baige_dark_hover);
+}
+
+button:disabled {
+  opacity: 0.75;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25);
 }
 
 body {  
